data/src/objects/iOrder__c.object
<CustomObject>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>iOrders</relationshipLabel>
        <relationshipName>iOrders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Order External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Number__c</fullName>
        <label>Shipping Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>iOrder</label>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iOrders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>